trying to fix flickering

--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -67,6 +67,15 @@
     transform: rotateY(180deg);
   }
 
+  .card-back:hover:after {
+    content: "";
+    height: calc(100% + 1rem);
+    position: absolute;
+    width: 100%;
+    z-index: -5;
+    bottom: -1rem;
+  }
+
   .card-front,
   .card-back {
     position: absolute;
